improving bg of the gameboard

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
 
     img {
       position: absolute;
-      top: 0px;
-      width: 100%;
+      width: 102%;
       height: 100%;
     }
   </style>
@@ -43,7 +42,7 @@
 <body>
   <div>
     <canvas></canvas>
-    <img src="./bg.png" alt="pacman">
+    <img src="src/bg.png" alt="pacman">
   </div>
 </body>
 </html>
