--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
     }
 
     #pacman {
+      top: 0px;
+      left: 0px;
+      transition: top 1s, left 1s;
       position: absolute;
       width: 4%;
       height: 4%;
