moveRight method for pacman

--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
     }
 
     #pacman {
-      top: 0px;
-      left: 0px;
-      transition: top 1s, left 1s;
+      top: 55%;
+      left: 50%;
+      transition: top 0.1s, left 0.1s;  
+      transition-timing-function: linear;
       position: absolute;
       width: 4%;
       height: 4%;
