--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     #pacman {
       top: 55%;
       left: 50%;
-      transition: top 0.1s, left 0.1s;  
+      transition: top 150ms, left 150ms;  
       transition-timing-function: linear;
       position: absolute;
       width: 4%;
