--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
       height: 4%;
       rotate: 180deg;
     }
+    #blinky,
+    #pinky,
+    #inky,
+    #clyde {
+      position: absolute;
+      width: 4%;
+      height: 4%;
+    }
   </style>
 </head>
 <body>
@@ -55,6 +63,10 @@
     <canvas></canvas>
     <img src="src/bg.png" alt="pacman" id="bg">
     <img src="src/animation.gif" alt="pacman" id="pacman">
+    <img src="src/blinky.png" alt="pacman" id="blinky">
+    <img src="src/Pinky.png" alt="pacman" id="pinky">
+    <img src="src/inky.png" alt="pacman" id="inky">
+    <img src="src/clyde.png" alt="pacman" id="clyde">
   </div>
 </body>
 </html> 
