fixing route algorithm

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     #pinky,
     #inky,
     #clyde {
+      transition: top 350ms, left 350ms; 
       position: absolute;
       width: 4%;
       height: 4%;
