redenring the newmap

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       transition: top 150ms, left 150ms;    
       transition-timing-function: linear;
       position: absolute;
-      width: 4%;
-      height: 4%;
+      width: 3%;
+      height: 3%;
       rotate: 180deg;
     }
 
@@ -55,15 +55,15 @@
     #clyde {
       transition: top 250ms, left 250ms;  
       position: absolute;
-      width: 6%;
-      height: 6%;
+      width: 4%;
+      height: 4%;
     }
   </style>
 </head>
 <body>
   <div>
     <canvas></canvas>
-    <img src="src/bg.png" alt="pacman" id="bg">
+    <!-- <img src="src/bg.png" alt="pacmank" id="bg"> -->
     <img src="src/animation.gif" alt="pacman" id="pacman">
     <img src="src/blinky.png" alt="pacman" id="blinky">
     <img src="src/Pinky.png" alt="pacman" id="pinky">
