--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     #bg {
       position: absolute;
-      width: 102%;
+      width: 100%;
       height: 100%;
     }
 
@@ -63,7 +63,7 @@
 <body>
   <div>
     <canvas></canvas>
-    <!-- <img src="src/bg.png" alt="pacmank" id="bg"> -->
+    <img src="src/bg.png" alt="pacmank" id="bg">
     <img src="src/animation.gif" alt="pacman" id="pacman">
     <img src="src/blinky.png" alt="pacman" id="blinky">
     <img src="src/Pinky.png" alt="pacman" id="pinky">
